
       NEW FEATURE: on-the-fly conversion of WAV, FLAC and OGG (as
       well as MP3 and M4A) files during export to the iPod. Thanks to
       Marc d[readlock], Simon Naunton and Peter Edwards!

       NEW FEATURE: editing of TV show metadata and track media
       type. Thanks to Mario Rossi.

       NEW FEATURE: Display of Album Art. Thanks to P.G. Richardson.

       UPDATE: Smart playlists now support the following new fields:
       album artist, tv show, last skipped, season number, skipcount
       and video kind.

       IMPROVEMENT: Clicking on an item with the right mouse button
       will select and open the context menu, which is the intended
       behavior. As a consequence, the interface will remain blocked
       while the selection is being updated and displayed.

       BUGFIX: dragging tracks between two iPods would sometimes not
       actually copy the file.

gtkpod V0.99.8

       NEW FEATURE: Support of several iPods (currently you need to
       edit the itdb_* entries in ~/.gtkpod/prefs to add
       repositories). Each iPod can be loaded/ejected
       individually. Scripts are called before loading (gtkpod.load)
       and after saving (gtkpod.eject) with the mountpoint as the
       first argument. If you need to mount the iPod manually, put the
       mount command in gtkpod.load.

       NEW FEATURE: Support for mobile phones supporting iTunes (see
       Changelog_detailed for details)

       NEW FEATURE: Lyrics are displayed on the iPod when available.

       NEW FEATURE: Preliminary (no meta data) support of h.264 video
       format via the libmp4v2 interface. Thanks to Peter Lieverdink.

       NEW FEATURE: Script to sync notes from Tomboy to the
       iPod. Thanks to Tejas Dinkar.

       NEW FEATURE: Support of iTunes iTunNORM tag for volume
       normalisation of mp4 tracks.

       NEW FEATURE: Support of aacgain's replay gain tag for volume
       normalisation of mp4 tracks (takes precedence over the iTunNORM