@@ -11,6 +11,10 @@ gtkpod V0.99.9CVS
 
        NEW FEATURE: Display of Album Art. Thanks to P.G. Richardson.
 
+       NEW FEATURE: copy playlists and tracks from within the context
+       menu without DND can simplify life with many playlists. Thanks
+       to Andrzej Palejko for his patch.
+
        UPDATE: Smart playlists now support the following new fields:
        album artist, tv show, last skipped, season number, skipcount
        and video kind.
